Release template-v2.0.r6